Bug 1304737 - Do not ignore trailing .* on matchOnly RegExp execution. r=h4writer, a=ritu